--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+     "test:debug": "npx playwright test tests/WebApiPart1.spec.js --debug"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
