some changes-completed cource

--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-     "test:debug": "npx playwright test tests/WebApiPart1.spec.js --debug"
+    "test:debug": "npx playwright test tests/WebApiPart1.spec.js --debug",
+     "regression" : "npx playwright test",
+     "webTests" :"npx playwright test --grep @web",
+     "APITests" : "npx playwright test --grep @API"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@playwright/test": "^1.52.0",
-    "@types/node": "^22.15.18"
+    "@playwright/test": "^1.53.0",
+    "@types/node": "^22.15.18",
+    "allure-playwright": "^3.2.2"
   }
 }
